# ProgramowanieSieciowe

./: CMakeLists.txt
Zestaw1/: odczyt  zadanie1.c  zadanie2.c  zadanie3.c  zadanie4.c  zadanie5.c  zadanie6.c
Zestaw3/: udp_client.c  udp_server.c
