cmake_minimum_required(VERSION 3.27)
project(ProgramowanieSieciowe C)

set(CMAKE_C_STANDARD 99)

add_executable(Zestaw1Zad1 Zestaw1/zadanie1.c)
add_executable(Zestaw1Zad2 Zestaw1/zadanie2.c)
add_executable(Zestaw1Zad3 Zestaw1/zadanie3.c)
add_executable(Zestaw1Zad4 Zestaw1/zadanie4.c)
add_executable(Zestaw1Zad5 Zestaw1/zadanie5.c)
add_executable(Zestaw1Zad6 Zestaw1/zadanie6.c)

